【优化】内存优化