@@ -1,7 +1,7 @@
 #!/bin/bash
 
 
-MEM=1200m
+MEM=300m
 JAR=`pwd`/server-execute.jar
 PID=`ps -ef | grep ${JAR} | grep -v grep | awk '{print $2}'`
 
@@ -23,7 +23,7 @@ start()
 		exit 1
 	fi
 
-	JAVA_PARAM="-Xms${MEM} -Xmx${MEM} -Xss512k -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -XX:CICompilerCount=4 -XX:-OmitStackTraceInFastThrow -XX:MaxDirectMemorySize=512m -XX:MaxGCPauseMillis=100 -Djdk.attach.allowAttachSelf=true -Xlog:gc*:target/gc.log:time,level,tags -XX:+UseZGC -XX:ConcGCThreads=2 -XX:+UseDynamicNumberOfGCThreads -server -jar"
+	JAVA_PARAM="-Xms${MEM} -Xmx${MEM} -Xss256k -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -XX:CICompilerCount=4 -XX:-OmitStackTraceInFastThrow -XX:MaxDirectMemorySize=128m -XX:MaxGCPauseMillis=100 -Djdk.attach.allowAttachSelf=true -Xlog:gc*:target/gc.log:time,level,tags -XX:+UseG1GC -XX:ConcGCThreads=2 -XX:+UseDynamicNumberOfGCThreads -server -jar"
 
 	nohup /usr/local/openjdk-21/bin/java ${JAVA_PARAM} ${JAR} > nohup.out 2>&1 &
 
